--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -13,7 +13,7 @@ Release Notes for CRUX PPC 3.5
  will require the user to obtain/build a kernel for their machine).
 
  Non supported machines:
- 64bit PowerPC
+ 64bit PowerPC.
 
   Toolchain updates
 
@@ -53,18 +53,29 @@ Release Notes for CRUX PPC 3.5
    is solved, a workaround is to install the xorg server packages and then
    run 'startx'.  The whole output will then be visible in the x windows.
 
+   The midori browser does not seem to function properly with https
+   connections (on ppc only, works fine on x86..).  Until this is solved, 
+   it is best to not spend the (long) time needed to build it and it's
+   dependency chain.
+
+   Only a subset of opt and xorg packages have been built with CRUX PPC.
+   Some of the packages have not been built at all, and others have had
+   to be downreved to build.   opt and xorg packages particularly are a 
+   work in progress for CRUX PPC.
  
   Tips
 
    Package build times can be quite long even on faster powerpc machines.
    Allow for some hours (maybe days on slower machines) when building 
-   big packages.
+   big packages.  Ensure that your machine has the maximum RAM that it
+   can support.
 
    For now, there is no pre-built browser provided.   The shortest path
    to a (somewhat functional) gui browser on CRUX-PPC is the "dillo" browser. 
    The "dillo" port is not present in 3.5 but previously existed and
    has been adjusted for 3.5.   It can be found under "misc".
 
-   THe lynx or links browser can also be installed quickly if a character based
+   The lynx or links browser can also be installed quickly if a text based
    browser is sufficient for the users needs.
+
    
